# gpcr-coupling-designer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/schema/: gpcrbeam_dataset.schema.json
src/gpcrbeam/: __init__.py  cli.py  config.py
src/gpcrbeam/cli/: __init__.py  dataset.py  main.py
src/gpcrbeam/data/: __init__.py
src/gpcrbeam/data/loaders/: gpcrdb_handler.py
src/gpcrbeam/data/sources/: __init__.py  gpcrdb_source.py
tests/: test_cli.py  test_data_sources.py
